...

        <!-- question=2 -->
        <!-- index=5 -->
        <item>¿Qué país es el segundo más grande del mundo?</item>
        <item>China</item>
        <item>Estados Unidos</item>
        <item>Canadá</item>
        <item>3</item>

        <!-- question=3 -->
        <!-- index=10 -->
        <item>¿Cómo se llama la tercera isla más grande del mundo?</item>
        <item>Madagascar</item>
        <item>Borneo</item>
        <item>Sumatra</item>
        <item>2</item>

        <!-- question=4 -->
...
