...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".question.QuestionActivity">

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
        <Space
            android:layout_width="16dp"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

        <Button
            android:id="@+id/cheatButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="Button"
            android:onClick="onCheatButtonClicked"
            tools:text="Cheat" />
...
